# Qt-Music-Player

./: README.md
newMusicPlayer/: CMakeLists.txt  Main.qml  filemanagebackend.cpp  filemanagebackend.h  main.cpp
newMusicPlayer/soundFiles/: AddMusicThisFolder.txt
newMusicPlayer/ui/assets/: AllAssets.txt
